<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="174dp"
    android:layout_height="122dp"
    android:background="@drawable/shape_card_last_training"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="12dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_type_last_training"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_last_training_type_example"
        app:layout_constraintEnd_toStartOf="@id/button_about"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/top_guideline" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_about_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_date_last_training"
        style="@style/SubtitleStyle"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_type_last_training"
        app:layout_constraintHorizontal_bias="0"
        android:layout_height="wrap_content"
        android:text="@string/card_last_training_date_example"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_type_last_training"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_time_last_training"
        android:src="@drawable/ic_time_icon"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        android:layout_width="18dp"
        app:layout_constraintEnd_toStartOf="@id/tv_time_last_training"
        android:layout_height="18dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_time_last_training"
        android:text="@string/card_last_training_time_example"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintStart_toEndOf="@id/img_time_last_training"
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:background="@drawable/ic_chronometer_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_about"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintVertical_bias="1"
        android:layout_marginEnd="4dp"
        android:layout_width="36dp"
        android:layout_height="36dp"/>








</merge>