<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".TrainingFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="36dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_header"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_date_fragment_training_example"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/top_guideline" />


    <ru.kirilldev.rowingutapp.ui.main.CustomCardView
        android:id="@+id/custom_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/center_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_training"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/mainPurple"
        android:contentDescription="@string/content_desrciption_add_training"
        android:elevation="4dp"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/mainPurple"
        app:fabCustomSize="64dp"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toTopOf="@id/rv_last_trainings"
        app:layout_constraintBottom_toBottomOf="@id/rv_last_trainings"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:pressedTranslationZ="16dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_last_training"
        android:layout_width="wrap_content"
        style="@style/HeaderTextStyle"
        app:layout_constraintTop_toBottomOf="@id/center_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        android:layout_marginTop="24dp"
        android:text="@string/header_last_trainings"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_last_trainings"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_last_training"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        android:layout_height="0dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>